[package]
name = "grugchat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.0"
bincode = "1.3.3"
celestia-rpc = "0.4.0"
celestia-types = "0.4.0"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
hex = "0.4.3"
